--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.1",
     "gulp-rimraf": "^0.2.1",
     "gulp-shell": "^0.5.2",
+    "gulp-webpack": "^1.5.0",
     "gulp-zip": "^3.2.0"
   }
 }
