--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "alexa-family-feud",
   "version": "1.0.0",
   "description": "Family Feud Skill for Alexa",
+  "license": "UNLICENSED",
   "main": "src/index.js",
   "scripts": {
     "start": "gulp",
