--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   },
   "homepage": "https://github.com/steveortiz/alexa-family-feud#readme",
   "devDependencies": {
+    "babel-core": "^6.20.0",
+    "babel-loader": "^6.2.9",
+    "babel-preset-es2015": "^6.18.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
     "gulp-rimraf": "^0.2.1",
     "gulp-shell": "^0.5.2",
     "gulp-webpack": "^1.5.0",
