--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "gulp": "^3.9.1",
     "gulp-rimraf": "^0.2.1",
     "gulp-shell": "^0.5.2",
-    "gulp-webpack": "^1.5.0",
-    "gulp-zip": "^3.2.0"
+    "gulp-zip": "^3.2.0",
+    "webpack": "^1.14.0",
+    "webpack-stream": "^3.2.0"
   }
 }
