--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "start": "gulp",
     "clean": "gulp clean",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test --compilers js:babel-core/register",
+    "watch": "mocha test --compilers js:babel-core/register --watch",
+    "debug": "mocha debug test --compilers js:babel-core/register --watch"
   },
   "repository": {
     "type": "git",
@@ -18,10 +20,15 @@
     "babel-core": "^6.20.0",
     "babel-loader": "^6.2.9",
     "babel-preset-es2015": "^6.18.0",
+    "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-rimraf": "^0.2.1",
     "gulp-shell": "^0.5.2",
     "gulp-zip": "^3.2.0",
+    "json-loader": "^0.5.4",
+    "mocha": "^3.2.0",
+    "sinon": "^1.17.6",
+    "sinon-chai": "^2.8.0",
     "webpack": "^1.14.0",
     "webpack-stream": "^3.2.0"
   }
