--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "gulp",
     "clean": "gulp clean",
+    "lint": "eslint src",
     "test": "mocha test --compilers js:babel-core/register",
     "watch": "mocha test --compilers js:babel-core/register --watch",
     "debug": "mocha debug test --compilers js:babel-core/register --watch"
@@ -21,6 +22,11 @@
     "babel-loader": "^6.2.9",
     "babel-preset-es2015": "^6.18.0",
     "chai": "^3.5.0",
+    "eslint": "^3.12.0",
+    "eslint-config-airbnb-base": "^10.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-mocha": "^4.7.0",
+    "eslint-plugin-sinon": "^0.2.0",
     "gulp": "^3.9.1",
     "gulp-rimraf": "^0.2.1",
     "gulp-shell": "^0.5.2",
