--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "gulp",
     "clean": "gulp clean",
     "lint": "eslint src",
-    "test": "mocha test --compilers js:babel-core/register",
-    "watch": "mocha test --compilers js:babel-core/register --watch",
-    "debug": "mocha debug test --compilers js:babel-core/register --watch"
+    "test": "mocha test/index.js --compilers js:babel-core/register",
+    "watch": "mocha test/index.js --compilers js:babel-core/register --watch",
+    "debug": "mocha debug test/index.js --compilers js:babel-core/register --watch"
   },
   "repository": {
     "type": "git",
@@ -37,5 +37,9 @@
     "sinon-chai": "^2.8.0",
     "webpack": "^1.14.0",
     "webpack-stream": "^3.2.0"
+  },
+  "dependencies": {
+    "bunyan": "^1.8.5",
+    "lodash": "^4.17.2"
   }
 }
