--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "webpack-stream": "^3.2.0"
   },
   "dependencies": {
-    "bunyan": "^1.8.5",
-    "lodash": "^4.17.2"
+    "lodash": "^4.17.2",
+    "winston": "^2.3.0"
   }
 }
